tests/neg-custom-args/captures/use-capset.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/use-capset.scala:11:22 -----------------------------------
11 |  val _: () -> Unit = h // error: should be ->{io}
   |                      ^
   |                      Found:    (h : () ->{io} Unit)
   |                      Required: () -> Unit
   |
   |                      Note that capability `io` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/use-capset.scala:13:50 -----------------------------------
13 |  val _: () -> List[Object^{io}] -> Object^{io} = h2 // error, should be ->{io}
   |                                                  ^^
   |                                                  Found:    (h2 : () ->{} List[Object^{io}] ->{io} Object^{io})
   |                                                  Required: () -> List[Object^{io}] -> Object^{io}
   |
   |                                                  Note that capability `io` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/use-capset.scala:5:49 ---------------------------------------------------------
5 |private def g[C^] = (xs: List[Object^{C}]) => xs.head // error TODO: allow this
  |                                              ^^^^^^^
  |                                              Capture set parameter C leaks into capture scope of method g.
